# manipula-db

./: CLAUDE.md  README.md  TECH_PLAN.md  Technical Plan for ManipulaDB.md  package.json  pnpm-lock.yaml
.claude/commands/: release.md
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  query.rs
src-tauri/src/db/: drivers.rs  mod.rs  pool_manager.rs
src-tauri/src/models/: config.rs  result.rs
src/components/DataTable/: index.tsx
src/components/Modals/: NewConnectionModal.tsx
src/components/QueryTab/: index.tsx
src/components/Sidebar/: index.tsx
src/lib/: invoke.ts
src/store/: connectionStore.ts  tabStore.ts
