[package]
name = "manipula-db"
version = "0.3.2"
description = "ManipulaDB — cross-platform database management tool"
authors = ["you"]
edition = "2021"

[lib]
name = "manipula_db_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "mysql", "sqlite"] }
dashmap = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
urlencoding = "2"
